--- a/coursework02/coursework02.csproj
+++ b/coursework02/coursework02.csproj
@@ -337,6 +337,8 @@
     <Content Include="Views\Search\GetLoanAlbum.cshtml" />
     <Content Include="Views\Search\GetMemberInActive.cshtml" />
     <Content Include="Views\Search\GetAlbumInActive.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Account\EditUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
